typescript/checker/tests/conformance/es6/templates/templateStringInCallExpression.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            51,
        ),
        hi: BytePos(
            63,
        ),
        ctxt: #0,
    },
    callee: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    51,
                ),
                hi: BytePos(
                    63,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
}
 --> $DIR/tests/conformance/es6/templates/templateStringInCallExpression.ts:1:1
  |
1 | `abc${0}abc`(`hello ${0} world`, `   `, `1${2}3`);
  | ^^^^^^^^^^^^

